--- a/harbor/1.3.2/templates/chartmuseum/chartmuseum-dpl.yaml
+++ b/harbor/1.3.2/templates/chartmuseum/chartmuseum-dpl.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.chartmuseum.enabled }}
+{{- $chartmuseum := .Values.persistence.persistentVolumeClaim.chartmuseum -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -91,7 +92,7 @@ spec:
       - name: chartmuseum-data
       {{- if and .Values.persistence.enabled (eq .Values.persistence.imageChartStorage.type "filesystem") }}
         persistentVolumeClaim:
-          claimName: {{ .Values.persistence.persistentVolumeClaim.chartmuseum.existingClaim | default (include "harbor.chartmuseum" .) }}
+          claimName: {{ $chartmuseum.existingClaim | default (include "harbor.chartmuseum" .) }}
       {{- else }}
         emptyDir: {}
       {{- end }}
