--- a/harbor/1.3.2/templates/core/core-dpl.yaml
+++ b/harbor/1.3.2/templates/core/core-dpl.yaml
@@ -38,7 +38,7 @@ spec:
           httpGet:
             path: /api/ping
             port: 8080
-          initialDelaySeconds: {{ .Values.core.livenessProbe.initialDelaySeconds }}
+          initialDelaySeconds: 30
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 10
