--- a/harbor/1.4.1/values.yaml
+++ b/harbor/1.4.1/values.yaml
@@ -191,19 +191,19 @@ persistence:
       # Set it to "-" to disable dynamic provisioning
       storageClass: ""
       subPath: ""
-      accessMode: ReadWriteOnce
+      accessMode: ReadWriteMany
       size: 5Gi
     chartmuseum:
       existingClaim: ""
       storageClass: ""
       subPath: ""
-      accessMode: ReadWriteOnce
+      accessMode: ReadWritemany
       size: 5Gi
     jobservice:
       existingClaim: ""
       storageClass: ""
       subPath: ""
-      accessMode: ReadWriteOnce
+      accessMode: ReadWriteMany
       size: 1Gi
     # If external database is used, the following settings for database will
     # be ignored
@@ -211,7 +211,7 @@ persistence:
       existingClaim: ""
       storageClass: ""
       subPath: ""
-      accessMode: ReadWriteOnce
+      accessMode: ReadWriteMany
       size: 1Gi
     # If external Redis is used, the following settings for Redis will
     # be ignored
@@ -219,13 +219,13 @@ persistence:
       existingClaim: ""
       storageClass: ""
       subPath: ""
-      accessMode: ReadWriteOnce
+      accessMode: ReadWriteMany
       size: 1Gi
     trivy:
       existingClaim: ""
       storageClass: ""
       subPath: ""
-      accessMode: ReadWriteOnce
+      accessMode: ReadWriteMany
       size: 5Gi
   # Define which storage backend is used for registry and chartmuseum to store
   # images and charts. Refer to
