--- a/harbor/1.5.3/templates/database/database-dpl.yaml
+++ b/harbor/1.5.3/templates/database/database-dpl.yaml
@@ -36,7 +36,7 @@ spec:
       - name: "change-permission-of-directory"
         securityContext:
           runAsUser: 0
-        image: {{ .Values.database.internal.initContainerImage.repository }}:{{ .Values.database.internal.initContainerImage.tag }}
+        image: {{ .Values.database.internal.image.repository }}:{{ .Values.database.internal.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         command: ["/bin/sh"]
         args: ["-c", "chown -R postgres:postgres /var/lib/postgresql/data"]
