--- a/harbor/1.5.3/templates/trivy/trivy-dpl.yaml
+++ b/harbor/1.5.3/templates/trivy/trivy-dpl.yaml
@@ -38,9 +38,9 @@ spec:
       serviceAccountName: {{ .Values.trivy.serviceAccountName }}
 {{- end }}
       securityContext:
-        runAsNonRoot: true
-        runAsUser: 10000
-        fsGroup: 10000
+        runAsNonRoot: false
+        runAsUser: 0
+        fsGroup: 0
       automountServiceAccountToken: false
       containers:
       - name: trivy
@@ -87,10 +87,15 @@ spec:
           - name: INTERNAL_TLS_ENABLED
             value: "true"
           - name: SCANNER_API_SERVER_TLS_KEY
-            value: /etc/harbor/ssl/trivy.key
+            value: /etc/harbor/ssl/trivy/tls.key
           - name: SCANNER_API_SERVER_TLS_CERTIFICATE
-            value: /etc/harbor/ssl/trivy.crt
+            value: /etc/harbor/ssl/trivy/tls.crt
           {{- end }}
+          - name: "SCANNER_REDIS_URL"
+            valueFrom:
+              secretKeyRef:
+                name: {{ template "harbor.trivy" . }}
+                key: redisURL
           - name: "SCANNER_STORE_REDIS_URL"
             valueFrom:
               secretKeyRef:
@@ -107,17 +112,11 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /home/scanner/.cache
+          subPath: {{ .Values.persistence.persistentVolumeClaim.trivy.subPath }}
           readOnly: false
         {{- if .Values.internalTLS.enabled }}
         - name: trivy-internal-certs
-          mountPath: /harbor_cust_cert/harbor_internal_ca.crt
-          subPath: ca.crt
-        - name: trivy-internal-certs
-          mountPath: /etc/harbor/ssl/trivy.crt
-          subPath: tls.crt
-        - name: trivy-internal-certs
-          mountPath: /etc/harbor/ssl/trivy.key
-          subPath: tls.key
+          mountPath: /etc/harbor/ssl/trivy
         {{- end }}
         {{- if .Values.caBundleSecretName }}
 {{ include "harbor.caBundleVolumeMount" . | indent 10 }}
@@ -142,6 +141,7 @@ spec:
           failureThreshold: 3
         resources:
 {{ toYaml .Values.trivy.resources | indent 12 }}
+      {{- if or (or .Values.internalTLS.enabled .Values.caBundleSecretName) (or (.Values.persistence.enabled) $trivy.existingClaim) }}
       volumes:
       {{- if .Values.internalTLS.enabled }}
       - name: trivy-internal-certs
@@ -158,5 +158,6 @@ spec:
       {{- else }}
       - name: "data"
         emptyDir: {}
+      {{- end }}
       {{- end }}
       {{- end }}
